--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ button:hover , .button:hover {
     max-width: 500px;
     height: 2.5em;
     font-size: 1em;
+    padding-left: 3px;
 }
 .search button {
     max-width: 15vw;
